--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,3 +5,8 @@ spring.profiles.active=test
 #spring.datasource.password=
 
 logging.level.org.springframework.jdbc=debug
+
+
+#testDB
+#spring.datasource.generate-unique-name=false
+
