--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,7 +6,11 @@ spring.profiles.active=test
 
 logging.level.org.springframework.jdbc=debug
 
-
 #testDB
 #spring.datasource.generate-unique-name=false
+
+#MyBatis
+mybatis.type-aliases-package=hello.itemservice.domain
+mybatis.configuration.map-underscore-to-camel-case=true
+logging.level.hello.itemservice.repository.mybatis=trace
 
