--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ logging.level.hello.itemservice.repository.mybatis=trace
 
 #mybatis 파일 한곳으로 보관할 때
 #mybatis.mapper-locations=classpath:mapper/**/*.xml
+
+#JPA log
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
